--- a/documentation/ipc-2014-paper/paper.tex
+++ b/documentation/ipc-2014-paper/paper.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 
-\title{Width and Inference Based Planners: SIW, BFS(f), and PROBE}
+\title{Width and Inference Based Planners: $\SR$, $\textit{BFS(f)}$, and $\textit{PROBE}$}
 
 % \author{Name1 Surname1 \and Name2 Surname2 \and Name3 Surname3\institute{University of Leipzig,
 % Germany, email: somename@informatik.uni-leipzig.de} }
@@ -35,10 +35,10 @@
         Hector Geffner \\
         ICREA \&  Universitat Pompeu Fabra \\
         Barcelona, SPAIN \\
-        {\normalsize\url{@upf.edu}}\footnote{firstname.lastname}
+        {\normalsize\url{@upf.edu}}\thanks{firstname.lastname}
 }
 
-\maketitle
+
 
 
 \newcommand{\tuple}[1]{{\langle #1\rangle}}
@@ -74,13 +74,13 @@
 \section{Introduction}
 \input{introduction.tex}
 
-\section{Iterated Width Search}
+\section{$\SR$: Iterated Width Search}
 \input{siw.tex}
 
-\section{Novelty Best-First Search}
+\section{$\textit{BFS(f)}$: Novelty Best-First Search}
 \input{novelty.tex}
 
-\section{PROBE}
+\section{$\textit{PROBE}$}
 \input{probe.tex}
 
 \section{Implementation Notes}
