--- a/documentation/ipc-2014-paper/aptk.tex
+++ b/documentation/ipc-2014-paper/aptk.tex
@@ -1,14 +1,14 @@
-The planners $\SR$, $BFS(f)$ have been implemented on top of a novel
-automated planning framework \texttt{lwaptk}\footnote{Source code available from
-\url{https://github.com/miquelramirez/lwaptk}.}. \texttt{lwaptk} is an extensible \texttt{C++}
+The planners $\SR$, $BFS(f)$ have been implemented using a novel
+automated planning framework, \texttt{lwaptk}\footnote{Source code available from
+\url{https://github.com/miquelramirez/lwaptk}.}. The toolkit is an extensible \texttt{C++}
 framework that decouples search and heuristic algorithms from \textsc{Pddl} parsing and grounding modules, by relying
 on planner "agnostic" data structures to represent (ground) fluents and actions.
-We consider \texttt{lwaptk} to be a valuable contribution as it allows to build a planning system by combining 
+We consider \texttt{lwaptk} to be a valuable contribution as it allows for the construction of a planning system by combining 
 readily available implementations of search algorithms and planning heuristics, without
 depending on specific parsing modules and grounding algorithms. Systems built in this manner
 can then be tested on \textsc{Ipc} benchmarks by "plugging" the planner into any of several available 
 parsing and grounding strategies and algorithms, most notably those of the \textsc{FF}~\cite{hoffmann:ff}
-planner and the \textsc{Fast-Downward} framework~\cite{helmert:fd}. Or alternatively, and more interestingly,
-the planner can be embedded into complex applications, \emph{directly}, if the "host" application is written in 
+planner and the \textsc{Fast-Downward} framework~\cite{helmert:fd}. Alternatively, and more interestingly,
+the planner can be embedded into complex applications, \emph{directly}, if the ``host'' application is written in 
 \texttt{C++}, or \emph{indirectly} when the host is written in an interpreted language, such as \textsc{Python}, 
 by wrapping the planner with suitably generated marshalling code. 
