--- a/documentation/ipc-2014-paper/paper.tex
+++ b/documentation/ipc-2014-paper/paper.tex
@@ -87,17 +87,14 @@
 \input{aptk.tex}
 
 
-\section{Experiments}
-\input{experiments.tex}
+%% \section{Experiments}
+%% \input{experiments.tex}
 
-\section{Discussion}
-\input{discussion.tex}
-.
-.
-.
-.
+%% \section{Discussion}
+%% \input{discussion.tex}
 
 \subsubsection{Acknowledgments}
+This work was partly supported by  Australian Research Council linkage grant LP11010015. 
 
 \bibliographystyle{aaai}
 
