Added section with notes on lwaptk

--- a/documentation/ipc-2014-paper/paper.tex
+++ b/documentation/ipc-2014-paper/paper.tex
@@ -80,10 +80,10 @@
 \section{Novelty Best-First Search}
 \input{novelty.tex}
 
-\section{PROBE: The Planner}
+\section{PROBE}
 \input{probe.tex}
 
-\section{Automated Planning Toolkit}
+\section{Implementation Notes}
 \input{aptk.tex}
 
 
@@ -105,4 +105,3 @@
 
 
 \end{document}
-
