--- a/documentation/ipc-2014-paper/siw.tex
+++ b/documentation/ipc-2014-paper/siw.tex
@@ -23,6 +23,5 @@ call IW more than $|G|$ times where $|G|$ is the number of atomic
 goals. SIW compares surprisingly well to a baseline heuristic search
 planner based on greedy best-first search and the $h_{add}$
 heuristic~\cite{bonet:aij-hsp}, but does not approach the performance
-of the most recent planners. Nonetheless, $\SR$ is able to compete well in
-domains amenable to simple serializations where the induced problems can
-be solved by $\IR(i)$ with $i\leq3$.
+of the most recent planners. Nonetheless, $\SR$ competes well in
+domains with no dead-ends and simple serializations.
