--- a/documentation/ipc-2014-paper/aptk.tex
+++ b/documentation/ipc-2014-paper/aptk.tex
@@ -7,7 +7,7 @@ We consider \texttt{lwaptk} to be a valuable contribution in itself since it all
 to develop, relying on a collection of readily available implementations of search algorithms and planning heuristics, 
 planners which are independent from specific parsing modules and grounding algorithms. 
 If the planner is to be acquiring descriptions of planning tasks from \textsc{Pddl} specifications, the toolkit
-provides the means to plug into the planner into either of \textsc{FF}~\cite{hoffmann:ff}
+provides the means to plug into the planner either  \textsc{FF}~\cite{hoffmann:ff}
 or \textsc{Fast-Downward}~\cite{helmert:fd} parsers. Alternatively, and more interestingly,
 the planner can be embedded into complex applications, \emph{directly}, if the ``host'' application is written in 
 \texttt{C++}, or \emph{indirectly} when the host is written in an interpreted language, such as \textsc{Python}, 
