--- a/documentation/ipc-2014-paper/novelty.tex
+++ b/documentation/ipc-2014-paper/novelty.tex
@@ -2,14 +2,10 @@
 
 While the blind-search \SR\ procedure competes well with a greedy
 best-first planner using the additive heuristic, neither planner is
-state-of-the-art. Since state-of-the-art performance is important in
-classical planning, we show next that it is possible to deliver such
-performance by integrating the idea of novelty that arises from width
-considerations, with known techniques such as helpful actions,
-landmarks, and heuristics. For this, we switch to a standard
+state-of-the-art.  For this, we developed a standard
 \emph{forward-search best-first planner} guided by an evaluation function
 that combines the notions of novelty and
-helpful actions \cite{nir:ecai12,hoffmann:ff}. Additionally, ties are broken
+helpful actions \cite{nir:ecai12,hoffmann:ff}. In this planner, called $\textit{BFS(f)}$ \cite{nir:ecai12}, ties are broken
 lexicographically by two other measures:
 (1) the number of subgoals not yet achieved up to a node in the search, and
-(2) the additive heuristic, $h_{add}$.
+(2) the additive heuristic, $h_{add}$. The additive heuristic is delayed for non-helpful actions.
