--- a/documentation/ipc-2014-paper/paper.tex
+++ b/documentation/ipc-2014-paper/paper.tex
@@ -94,7 +94,7 @@
 %% \input{discussion.tex}
 
 \subsubsection{Acknowledgments}
-This work was partly supported by Australian Research Council Linkage grant LP11010015, and Discovery Project's DP120100332 and DP130102825.
+This work was partly supported by Australian Research Council Linkage grant LP11010015, and Discovery Projects DP120100332 and DP130102825.
 
 \bibliographystyle{aaai}
 
