Added discovery grant link

--- a/documentation/ipc-2014-paper/paper.tex
+++ b/documentation/ipc-2014-paper/paper.tex
@@ -94,7 +94,7 @@
 %% \input{discussion.tex}
 
 \subsubsection{Acknowledgments}
-This work was partly supported by  Australian Research Council linkage grant LP11010015. 
+This work was partly supported by Australian Research Council Linkage grant LP11010015 and Discovery Project DP120100332. 
 
 \bibliographystyle{aaai}
 
