--- a/documentation/ipc-2014-paper/paper.tex
+++ b/documentation/ipc-2014-paper/paper.tex
@@ -33,7 +33,7 @@
    {\normalsize\url{@unimelb.edu.au}}
    \And
         Hector Geffner \\
-        ICREA \&  U. Pompeu Fabra \\
+        ICREA \&  Universitat Pompeu Fabra \\
         Barcelona, SPAIN \\
         {\normalsize\url{@upf.edu}}\thanks{firstname.lastname}
 }
